refactor: move reset password endpoints
